--- a/shared/templates/layout.html
+++ b/shared/templates/layout.html
@@ -1,25 +1,23 @@
 ﻿<nav class="navbar navbar-default navbar-static-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#topnav">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" ui-sref="master.home">Tracker Service</a>
+            <a class="navbar-brand" ui-sref="master.vocabulary">Funny English</a>
         </div>
 
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="topnav">
             <ul class="nav navbar-nav">
-                <li ui-sref-active="active"><a ui-sref="master.home">Home</a></li>
-                <li ui-sref-active="active"><a ui-sref="master.tracker">Tracker</a></li>
-
+                <li ui-sref-active="active"><a ui-sref="master.vocabulary">Vocabulary</a></li>
+                <li ui-sref-active="active"><a ui-sref="master.addvocabulary">Add Vocabulary</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-
-<div class="container-fluid" ui-view>
+<div class="container" ui-view>
 </div>
