--- a/app/app.css
+++ b/app/app.css
@@ -38,3 +38,36 @@
         top: 0 !important;
     }
 }
+
+
+.nav a.active{
+    background-color: aliceblue;
+}
+
+.flex-fill {
+    -ms-flex: 1 1 auto!important;
+    flex: 1 1 auto!important;
+}
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #e5e9f2;
+    border-radius: 0;
+    margin-bottom: 2rem;
+}
+
+.pd-l-0 {
+    padding-left: 0px !important;
+}
+
+.pd-r-15 {
+    padding-right: 15px !important;
+}
