show all week time entries for old week

--- a/app/app.css
+++ b/app/app.css
@@ -103,5 +103,5 @@ color: lightseagreen;
     }
 
 table tr.table-odd-row {
-    background-color: aliceblue;
+    background-color: antiquewhite;
 }
