--- a/app/app.css
+++ b/app/app.css
@@ -105,3 +105,29 @@ color: lightseagreen;
 table tr.table-odd-row {
     background-color: antiquewhite;
 }
+
+.order {
+    margin-top: 50px;
+}
+
+.order-website{
+    width: 100%;
+    height: 750px;
+
+}
+
+
+.order .table td, .order .table th {
+    border-top: none;
+}
+
+.order fieldset.fieldset-border {
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+    padding: 0 1.4em 1.4em 1.4em !important;
+    margin: 0 0 1.5em 0 !important;
+    -webkit-box-shadow:  0px 0px 0px 0px #000;
+            box-shadow:  0px 0px 0px 0px #000;
+}
