--- a/app/app.css
+++ b/app/app.css
@@ -131,3 +131,9 @@ table tr.table-odd-row {
     -webkit-box-shadow:  0px 0px 0px 0px #000;
             box-shadow:  0px 0px 0px 0px #000;
 }
+
+.order-detail-link{
+    cursor: pointer;
+    color: blue;
+    margin-bottom: 4px;
+}
