create update op time entry

--- a/app/app.css
+++ b/app/app.css
@@ -102,6 +102,10 @@ color: lightseagreen;
     color: red;
     }
 
+
+    .timesheet i.fa-save{
+        color: blue;
+        }
 table tr.table-odd-row {
     background-color: antiquewhite;
 }
