--- a/app/app.css
+++ b/app/app.css
@@ -417,3 +417,12 @@ fieldset.fieldset-border {
 }
 
 /* end animate */
+.app-page {
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.admin-page {
+
+}
